# president-speech

./: .gitignore  Dockerfile  README.md  fly.toml  mkdocs.yml  pyproject.toml  requirements.txt
docs/: reference.md
note/: dask.ipynb  df2sqllite.ipynb  modin.ipynb  nlp.ipynb  nlp2.ipynb  nlp_nng.ipynb  pandas_downcast.ipynb  qr.ipynb  streamlit_chart.ipynb  trimming.ipynb
note/<function get_parquet_tmp_dir at 0x12a7ae940>/partition/df.parquet/president=%EA%B9%80%EB%8C%80%EC%A4%91/: 7c7b866bc0134f6fa96739a60f3dc6f0-0.parquet
note/<function get_parquet_tmp_dir at 0x12a7ae940>/partition/df.parquet/president=%EA%B9%80%EC%98%81%EC%82%BC/: b33bb97318c44115b5e1f21e206f7116-0.parquet
note/<function get_parquet_tmp_dir at 0x12a7ae940>/partition/df.parquet/president=%EB%85%B8%EB%AC%B4%ED%98%84/: 7c7b866bc0134f6fa96739a60f3dc6f0-0.parquet
note/<function get_parquet_tmp_dir at 0x12a7ae940>/partition/df.parquet/president=%EB%85%B8%ED%83%9C%EC%9A%B0/: b33bb97318c44115b5e1f21e206f7116-0.parquet
note/<function get_parquet_tmp_dir at 0x12a7ae940>/partition/df.parquet/president=%EB%AC%B8%EC%9E%AC%EC%9D%B8/: b33bb97318c44115b5e1f21e206f7116-0.parquet
note/<function get_parquet_tmp_dir at 0x12a7ae940>/partition/df.parquet/president=%EB%B0%95%EA%B7%BC%ED%98%9C/: 7c7b866bc0134f6fa96739a60f3dc6f0-0.parquet
note/<function get_parquet_tmp_dir at 0x12a7ae940>/partition/df.parquet/president=%EC%9C%A4%EB%B3%B4%EC%84%A0/: 7c7b866bc0134f6fa96739a60f3dc6f0-0.parquet
note/<function get_parquet_tmp_dir at 0x12a7ae940>/partition/df.parquet/president=%EC%9D%B4%EB%AA%85%EB%B0%95/: b33bb97318c44115b5e1f21e206f7116-0.parquet
note/<function get_parquet_tmp_dir at 0x12a7ae940>/partition/df.parquet/president=%EC%9D%B4%EC%8A%B9%EB%A7%8C/: b33bb97318c44115b5e1f21e206f7116-0.parquet
note/<function get_parquet_tmp_dir at 0x12a7ae940>/partition/df.parquet/president=%EC%B5%9C%EA%B7%9C%ED%95%98/: b33bb97318c44115b5e1f21e206f7116-0.parquet
site/: 404.html  index.html  objects.inv
site/explanation/: index.html
site/how-to-guides/: index.html
site/reference/: index.html
site/tutorials/: index.html
src/president_speech/: webapp.py
src/president_speech/db/: parquet_interpreter.py
src/president_speech/db/parquet/result_df.parquet/: part-0000.snappy.parquet
src/president_speech/db/parquet_tmp/partition/df/president=%EC%A0%84%EB%91%90%ED%99%98/: d016a82b3ad442adb23589bbbc2ff92d-0.parquet
src/president_speech/webapp/: home.py
src/president_speech/webapp/pages/: 2_search_by_president.py  4_search_by_speech.py  5_frequency.py  6_LLM.py  7_blenderbot-400M.py  7_partisanQR.py
tests/: test_parquet_interpreter.py
