[project]
name = "president-speech"
version = "0.9.0"
description = "helper pip package module for analyzing presidential speech records (including basic data)"
authors = [
    {name = "dmario24", email = "data.mario24@gmail.com"},
]
dependencies = [
    "streamlit==1.26.0",
    "termplotlib>=0.3.9",
    "tabulate>=0.9.0",
    "fastparquet>=2023.8.0",
    "pyarrow>=13.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.3",
    "streamlit-chat>=0.1.1",
    "konlpy>=0.6.0",
    "dask>=2023.5.0",
]
requires-python = ">=3.8,!=3.9.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ps-db-init = 'president_speech.extract_speech_from_pdf:run'
ps-search = 'president_speech.cli:search'
ps-wordcount = 'president_speech.cli:word_count'

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"president_speech.db" = ["init.db"]
"*" = ["*.parquet"]
#"president_speech.db.parquet" = ["president_speech_ko.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president\\=%EA%B9%80%EB%8C%80%EC%A4%91" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EA%B9%80%EC%98%81%EC%82%BC" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EB%85%B8%EB%AC%B4%ED%98%84" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EB%85%B8%ED%83%9C%EC%9A%B0" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EB%AC%B8%EC%9E%AC%EC%9D%B8" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EB%B0%95%EA%B7%BC%ED%98%9C" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EB%B0%95%EC%A0%95%ED%9D%AC" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EC%9C%A4%EB%B3%B4%EC%84%A0" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EC%9D%B4%EB%AA%85%EB%B0%95" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EC%9D%B4%EC%8A%B9%EB%A7%8C" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EC%A0%84%EB%91%90%ED%99%98" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]
#"president_speech.db.parquet_tmp.partition.df.president=%EC%B5%9C%EA%B7%9C%ED%95%98" = ["d016a82b3ad442adb23589bbbc2ff92d-0.parquet"]

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]
doc = [
    "mkdocs>=1.5.2",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-material>=9.2.8",
]
dev = [
    "jupyter>=1.0.0",
    "pandas-downcast>=1.2.4",
    "setuptools>=68.2.0",
]

[tool.pdm.scripts]
ctest = "pytest --cov"
ptest = "pytest -s"
test = "pytest"
runweb = "streamlit run src/president_speech/webapp/home.py"

[project.urls]
"Homepage" = "https://github.com/edu-data-mario/president-speech"
"Bug Tracker" = "https://github.com/edu-data-mario/president-speech/issues"
